[package]
name = "super-rodio"
version = "0.0.1"
edition = "2021"
authors = ["Tzu-Ching Yang"]
license = "MIT"
description = "An out-of-the-box rust audio-player library that utilize rodio in thread-safe manners."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limited-queue = "0.1.0"
rodio = "0.19.0"
